--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,9 +10,9 @@ blocks:
       jobs:
         - name: Build
           commands:
-            - sem-version python 3.6.9
+            - sem-version python 3.7
             - checkout
             - mkdir .pip_cache
             - cache restore
-            - pip install --cache-dir .pip_cache -r requirements.txt
+            - pip install --cache-dir .pip_cache -r requirements.txt --user
             - cache storecheckout
