--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,5 +14,6 @@ blocks:
             - checkout
             - mkdir .pip_cache
             - cache restore
-            - pip install --cache-dir .pip_cache -r requirements.txt --user
+            - pip install --upgrade pip
+            - pip install --cache-dir .pip_cache -r requirements.txt
             - cache storecheckout
