--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,6 +24,7 @@ blocks:
           - sem-version python 3.7
           - checkout
           - cache restore
+          - pip install --upgrade pip
           - pip install --cache-dir .pip_cache -r requirements.txt
       jobs:
         - name: Unit tests
